--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,8 @@ table {
 
 th,
 td {
+	height: 70px;
+	box-sizing: border-box;
 	border: 2px solid #0f3460;
 	padding: 15px;
 	text-align: center;
